# baby_foot_elo

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vitest.config.ts
.github/workflows/: backup-database.yml
app/: globals.css  layout.tsx  page.tsx
app/matches/: page.tsx
app/teams/: page.tsx
backend/: Procfile  README.md  pylintrc  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  health.py  matches.py  players.py  teams.py
backend/app/core/: __init__.py  config.py
backend/app/crud/: __init__.py  batch_operations.py  builders.py  elo_history.py  matches.py  players.py  queries.py  stats.py  teams.py
backend/app/crud/builders/: __init__.py  base.py  delete.py  insert.py  select.py  update.py
backend/app/db/: __init__.py  database.py  database_manager.py  initializer.py  retry.py  schema.py  schema_definitions.py  transaction.py
backend/app/db/builders/: __init__.py  base.py  delete.py  insert.py  select.py  update.py
backend/app/db/repositories/: __init__.py  elo_history.py  matches.py  players.py  players_elo_history.py  stats.py  teams.py  teams_elo_history.py
backend/app/db/schemas/: __init__.py  matches.py  players.py  players_elo_history.py  teams.py  teams_elo_history.py
backend/app/db/session/: __init__.py  retry.py  transaction.py
backend/app/exceptions/: __init__.py  matches.py  players.py  teams.py
backend/app/models/: __init__.py  elo_history.py  match.py  periodic_ranking.py  player.py  team.py  team_periodic_ranking.py
backend/app/routers/: __init__.py  health.py  matches.py  players.py  teams.py  test_info.py
backend/app/schema/: __init__.py  elo_history.py  matches.py  periodic_rankings.py  players.py  team_periodic_rankings.py  teams.py
backend/app/schemas/: __init__.py  elo_history.py  matches.py  players.py  teams.py  teams_elo_history.py
backend/app/services/: __init__.py  elo.py  elo_calculator.py  matches.py  players.py  stats.py  teams.py
backend/app/services/elo/: __init__.py  calculator.py  recalculator.py  validation.py
backend/app/utils/: __init__.py  error_handlers.py  rate_limiter.py  validation.py
backend/tests/: test_database.py  test_schema_definitions.py
backend/tests/test_crud/: test_elo_history.py  test_matches.py  test_players.py  test_stats.py  test_teams.py
backend/tests/test_db/: test_database.py  test_retry.py  test_schema.py  test_transaction.py
backend/tests/test_models/: __init__.py  test_elo_history_model.py  test_match_model.py  test_periodic_ranking_model.py  test_player.py  test_player_model.py  test_team_model.py  test_team_periodic_ranking_model.py
backend/tests/test_routers/: __init__.py  test_matches.py  test_teams.py  test_teams_validation.py
backend/tests/test_schema/: __init__.py  test_schema.py
backend/tests/test_services/: __init__.py  test_elo_calculator.py  test_elo_recalculator.py  test_elo_service.py
backend/tests/test_utils/: test_validation.py
components/: ThemeProvider.tsx  app-sidebar.tsx
components/common/: EntityLoadingSkeleton.tsx  EntityMatchesSection.tsx  EntityStatsCards.tsx  PodiumGrid.tsx  RankingTable.tsx
components/matches/: MatchHistoryUI.tsx  NewMatchDialog.tsx  NewMatchPage.tsx
components/players/: PlayerDetail.tsx  PlayerErrorAlert.tsx  PlayerMatchesSection.tsx  PlayerRegistrationForm.tsx  PlayersList.tsx
components/rankings/: PlayerRankingTable.tsx  PlayerRankingsDisplay.tsx  TeamRankingTable.tsx  TeamRankingsDisplay.tsx
components/teams/: TeamDetail.tsx  TeamMatchesSection.tsx
components/ui/: alert-dialog.tsx  command.tsx  date-range-picker.tsx  pagination.tsx  (+2 more)
docs/: README.md  database-backup.md  local_testing.md  project.md
frontend/: Procfile  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend_v2/: app.vue  nuxt.config.ts  nuxt.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: backup_supabase.sh  restore_supabase.sh
services/: matchService.ts  playerService.ts
supabase/: config.toml  get_all_teams_with_stats.sql  get_player_full_stats.sql  get_player_matches_json.sql
types/: match.types.ts  stats.types.ts
(+190 files in other folders)
