[project]
name = "baby-foot-elo"
version = "0.1.0"
description = "Backend pour la gestion du classement ELO de Baby Foot IHM"
authors = [
    {name = "Kone Abdallah Hakim",email = "71593784+schalappe@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "duckdb (>=1.2.2,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pylint = "^3.3.6"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
